# matrix-appservices

./: Cargo.toml  README.md
matrix-appservices/: Cargo.toml
matrix-appservices/src/: client.rs  errors.rs  lib.rs
matrix-appservices/src/types/: config.rs  mod.rs  registration.rs  requests.rs
