[workspace]
resolver = "3"
members = ["matrix-appservices"]

[workspace.dependencies]
anyhow = "1.0.100"
bon = "3.8.1"
matrix-sdk = "0.14.0"
serde = "1.0.228"
thiserror = "2.0.17"
tokio = "1.47.1"
genrs = "0.1.1"
ruma = "0.13.0"
serde_json = "1.0.145"
serde_norway = "0.9"
async-channel = "2.5.0"
axum = "0.8.6"
