[package]
name = "matrix-appservices"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-channel = "2.5.0"
bon = { workspace = true }
genrs = { workspace = true }
matrix-sdk = { workspace = true, features = ["anyhow"] }
ruma = { workspace = true, features = ["appservice-api", "client-api-c"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
warp = { workspace = true, features = ["server"] }
